GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/Expirations__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to track information for License, Insurance, certifications Expiration date info of the Nurses.</description>
    <label>Expiration</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Expiration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expirations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>