GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the document type</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>