GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration Date of when document expires</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>