GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/Expiration_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Status__c</fullName>
    <formula>IF( TODAY() &gt; Expiration_Date__c , (IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Expired&quot;, 10 , 10)), (IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Valid&quot;, 10, 10)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>