GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Audit Trail</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>