GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
                <default>true</default>
                <label>RN</label>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>RPN</fullName>
            </value>
            <value>
                <fullName>LVN</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>