GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/ProviderID__c.field-meta.xml
<CustomField>
    <fullName>ProviderID__c</fullName>
    <description>This field is used to fetch the Nurse details from Contact Database</description>
    <label>Provider ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expirations</relationshipLabel>
    <relationshipName>Expirations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>