GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the document becomes valid</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>