GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/validationRules/Validation_for_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_End_Date</fullName>
    <active>true</active>
    <description>End date must come after start date</description>
    <errorConditionFormula>Start_Date__c &gt;  Expiration_Date__c</errorConditionFormula>
    <errorMessage>End Date must be After Start Date</errorMessage>
</ValidationRule>