GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/validationRules/Validation_on_Contract_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Contract_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISPICKVAL(Document_Type__c, &apos;Contract&apos;),
ISBLANK( Start_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date is mandatory for the Expiration Type Contract</errorMessage>
</ValidationRule>