GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/validationRules/Validation_on_License_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_License_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Document_Type__c, &apos;License&apos;),
OR(ISBLANK( Start_Date__c ), ISBLANK(  Expiration_Date__c)))</errorConditionFormula>
    <errorDisplayField>Document_Type__c</errorDisplayField>
    <errorMessage>Start Date and Expiration Date are mandatory for the Document Type License.</errorMessage>
</ValidationRule>