GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/validationRules/Validation_On_Start_Date_Background_Chec.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Start_Date_Background_Chec</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISPICKVAL(Document_Type__c, &apos;Background Check&apos;), ISBLANK( Start_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date is mandatory for the Document Type Background Check.</errorMessage>
</ValidationRule>