GloablServices/keshavglobal/force-app/main/default/objects/Expirations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Expiration_Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>